--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -571,7 +571,7 @@
     <string name="txt_email_is_not_registered">Email is not registered</string>
     <string name="txt_invalid_email_or_password">Invalid email or password</string>
     <string name="txt_your_account_has_been_blocked">Your account has been blocked</string>
-    <string name="txt_password_is_too_weak_and_required">Password is too weak! Password must contain at least 8 characters, 1 uppercase letter, 1 lowercase letter, 1 number, and 1 special character.</string>
+    <string name="txt_password_is_too_weak_and_required">Password length must be at least 6 characters</string>
     <string name="txt_birthday_is_required">Birthday is required</string>
     <string name="txt_email_is_already_registered">Email is already registered</string>
     <string name="txt_something_went_wrong">Something went wrong</string>
@@ -661,4 +661,6 @@
     <string name="txt_password_changed_successfully">Password changed successfully</string>
     <string name="txt_password_is_incorrect">Password is incorrect</string>
     <string name="txt_toggle_password_visibility">Toggle password visibility</string>
+    <string name="txt_new_password_must_be_different_from_the_current_password">New password must be different from the current password</string>
+    <string name="txt_please_fill_in_all_fields">Please fill in all fields</string>
 </resources>
