--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -15,7 +15,7 @@
     <string name="txt_email_verification_failed">Xác minh email thất bại</string>
     <string name="txt_password_reset_failed">Đặt lại mật khẩu thất bại</string>
     <string name="txt_password_reset_successful">Đặt lại mật khẩu thành công</string>
-    <string name="txt_please_enter_your_new_password">Vui lòng nhập mật khẩu mới của bạn</string>
+    <string name="txt_enter_new_password">Nhập mật khẩu mới</string>
     <string name="txt_new_password">Mật khẩu mới</string>
     <string name="txt_confirm_password">Xác nhận mật khẩu</string>
     <string name="txt_log_in_with_email">Đăng nhập bằng email</string>
@@ -36,8 +36,8 @@
     <string name="txt_are_you_a_teacher_or_a_student">Bạn là giáo viên hay học sinh?</string>
     <string name="txt_sign_up_failure">Đăng ký thất bại</string>
     <string name="txt_signup_with_email">Đăng ký bằng email</string>
-    <string name="txt_select_your_birthday">Chọn ngày sinh của bạn</string>
-    <string name="txt_example_email_com">example@email.com</string>
+    <string name="txt_select_your_birthday">Chọn ngày sinh nhé</string>
+    <string name="txt_example_email_com">vidu@email.com</string>
     <string name="txt_create_your_password">Tạo mật khẩu của bạn</string>
     <string name="txt_signing_up">Đang đăng ký…</string>
     <string name="txt_login">Đăng nhập</string>
@@ -49,12 +49,12 @@
     <string name="txt_privacy_policy">" Chính sách Bảo mật"</string>
     <string name="txt_of_quickmem">" của QuickMem"</string>
     <string name="txt_already_have_an_account">Đã có tài khoản?</string>
-    <string name="txt_almost_done">Gần xong!</string>
+    <string name="txt_almost_done">Gần xong rồi!</string>
     <string name="txt_enter_your_birthday_this_won_t_be_visible_to_others">Nhập ngày sinh của bạn. Thông tin này sẽ không hiển thị với người khác.</string>
     <string name="txt_updating">Đang cập nhật…</string>
     <string name="txt_full_name">Họ và Tên</string>
     <string name="txt_close">Đóng</string>
-    <string name="txt_what_should_we_call_you">Chúng tôi nên gọi bạn là gì?</string>
+    <string name="txt_what_should_we_call_you">Tên của bạn là gì nhỉ?</string>
     <string name="txt_submit">Gửi</string>
     <string name="txt_failed_to_resend_email">Gửi lại email thất bại</string>
     <string name="txt_please_check_your_email_again">Vui lòng kiểm tra lại email của bạn</string>
@@ -64,7 +64,7 @@
     <string name="txt_check_your_email">Kiểm tra email của bạn</string>
     <string name="txt_please_enter_the_code_we_sent_to_your_email">Vui lòng nhập mã chúng tôi đã gửi tới email của bạn</string>
     <string name="txt_didn_t_receive_the_code">Chưa nhận được mã?</string>
-    <string name="txt_update_email">Cập nhật email</string>
+    <string name="txt_update_email">Sửa lại email</string>
     <string name="txt_resend">Gửi lại</string>
     <string name="txt_verifying">Đang xác minh…</string>
     <string name="txt_flashcards">Thẻ ghi nhớ</string>
@@ -253,7 +253,7 @@
     <string name="txt_role_updated_success">Đã cập nhật vai trò thành công!</string>
     <string name="txt_teacher">Giáo viên</string>
     <string name="txt_signup_description">Xin chào! Hãy bắt đầu nào.</string>
-    <string name="txt_login_description">Chào mừng trở lại! Đăng nhập vào tài khoản của bạn</string>
+    <string name="txt_login_description">Rất vui được gặp lại bạn! Hãy đăng nhập để tiếp tục nào</string>
     <string name="txt_ai_generated">Được tạo bởi AI</string>
     <string name="txt_yes">Đúng</string>
     <string name="txt_top_streak">Top Streaks</string>
@@ -660,4 +660,7 @@
     <string name="txt_toggle_password_visibility">Chuyển đổi hiển thị mật khẩu</string>
     <string name="txt_new_password_must_be_different_from_the_current_password">Mật khẩu mới phải khác mật khẩu hiện tại</string>
     <string name="txt_please_fill_in_all_fields">Vui lòng điền vào tất cả các trường</string>
+    <string name="txt_no_internet">Ôi không! Bạn đang ngoại tuyến</string>
+    <string name="txt_enter_your_email">Nhập địa chỉ email của bạn</string>
+    <string name="txt_reset_password_description">Nhập email của bạn để nhận OTP đặt lại mật khẩu.</string>
 </resources>
