--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">QuickMem</string>
+    <string name="web_client_id" translatable="false">743857474439-b8umbci861okgpukka3l8lr1tfrvjso8.apps.googleusercontent.com</string>
     <string name="txt_get_started">Get Started</string>
     <string name="txt_next">Next</string>
     <string name="txt_skip">Skip</string>
