--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -669,4 +669,5 @@
     <string name="txt_reset_password_description">We\'ll send you an email with an OTP to reset your password.</string>
     <string name="txt_check_your_email_for_verification">Check your email for verification</string>
     <string name="txt_student">Student</string>
+    <string name="txt_signup_success">Sign up successfully</string>
 </resources>
