feat(flashcard): enhance flashcard creation with voice and language selection features

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -681,6 +681,10 @@
     <string name="txt_study_sets_count">%1$s bộ học</string>
     <string name="txt_flashcard_deleted">Đã xoá thẻ</string>
     <string name="txt_voice">Custom voice</string>
+    <string name="txt_select_voice">Select Voice</string>
+    <string name="txt_select_language">Select Language</string>
+    <string name="txt_no_language_found">No language found</string>
+    <string name="txt_voice_name">Voice: %1$s</string>
     <plurals name="hours">
         <item quantity="other">%d giờ</item>
     </plurals>
