--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -611,6 +611,9 @@
     <string name="txt_no_language_found">Không tìm thấy ngôn ngữ</string>
     <string name="txt_voice_name">Giọng nói: %1$s</string>
     <string name="txt_no_voice_found">Không tìm thấy giọng</string>
+    <string name="txt_see_all">Xem tất cả</string>
+    <string name="txt_all_recent_access_study_sets">Tất cả bộ học đã truy cập gần đây</string>
+    <string name="txt_study_sets_you_ve_recently_opened_to_view_their_details">Bộ học mà bạn đã mở gần đây để xem chi tiết</string>
     <plurals name="hours">
         <item quantity="other">%d giờ</item>
     </plurals>
