--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -595,9 +595,9 @@
     <string name="txt_no_data">Chưa có dữ liệu</string>
     <string name="txt_statistics">Thống kê</string>
     <string name="txt_failed_to_clear_all_notifications">Lỗi khi xoá tất cả thông báo</string>
-    <string name="txt_ai_generative"> AI sinh sáng</string>
-    <string name="txt_this_study_set_does_not_have_any_flashcards_yet">This study set does not have any flashcards yet</string>
-    <string name="txt_you_can_add_flashcards_to_your_study_set">You can add flashcards_to_your_study_set</string>
+    <string name="txt_ai_generative"> Tạo bộ học bằng AI</string>
+    <string name="txt_this_study_set_does_not_have_any_flashcards_yet">Bộ học này chưa có flashcard nào</string>
+    <string name="txt_you_can_add_flashcards_to_your_study_set">Bạn có thể thêm flashcard vào bộ học này:) tạo thêm nhé!</string>
     <string name="txt_get_started_by_adding_your_first_flashcards">Bắt đầu ngay bằng cách thêm flashcard đầu tiên của bạn!</string>
     <string name="txt_flashcards_help_you_study_efficiently_try_adding_one_now">Flashcard sẽ giúp bạn học hiệu quả hơn. Thử thêm một cái ngay bây giờ nhé!</string>
     <string name="txt_flashcard">Flashcard</string>
