feat: improve change language setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,6 +251,7 @@
     <string name="txt_vn_flag">VN Flag</string>
     <string name="txt_check">Check</string>
     <string name="txt_us_flag">US Flag</string>
+    <string name="txt_follow_system">Follow system</string>
     <string name="txt_here_is_how_to_get_started">Here\'s how to get started</string>
     <string name="txt_create_a_flashcard">Create a flashcard</string>
     <string name="txt_create_your_own_flashcards">Create your own flashcards</string>
