--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -248,6 +248,7 @@
     <string name="txt_vn_flag">Cờ VN</string>
     <string name="txt_check">Kiểm tra</string>
     <string name="txt_us_flag">Cờ Mỹ</string>
+    <string name="txt_follow_system">Theo hệ thống</string>
     <string name="txt_here_is_how_to_get_started">Dưới đây là cách bắt đầu</string>
     <string name="txt_create_a_flashcard">Tạo một thẻ học</string>
     <string name="txt_create_your_own_flashcards">Tạo thẻ học của riêng bạn</string>
